log/build_2024-03-13_14-52-52/mypkg/stderr.log
  File "/home/yamashita/car_ws/install/mypkg/lib/python3.10/site-packages/mypkg/CircleImgPub.py", line 67
    t++
       ^
SyntaxError: invalid syntax

